# demos

./: .gitignore  README.md
.github/workflows/: main.yml
ai-art/: Pipfile  README.md  ai-art.ipynb  ai-art.py
risk-evaluation/: .gitignore  pyproject.toml  risk-evaluation.ipynb  submission.csv  test_data_post.csv  train_data.csv
