[tool.poetry]
name = "risk-evaluation"
version = "0.1.0"
description = "none"
authors = ["Charitarth Chugh <37895518+charitarthchugh@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "risk_evaluation"}]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
transformers = {extras = ["torch"], version = "^4.35.0"}
evaluate = "^0.4.1"
ipykernel = "^6.26.0"
wandb = "^0.15.12"
datasets = "^2.14.6"
pandas = "^2.1.2"
numpy = "^1.26.1"
torch = "^2.1.0"
scikit-learn = "^1.3.2"
accelerate = "^0.24.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.10.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
